fix: hide visual which appeared on mobile, when the item title was clicked while seeing the list of items

--- a/src/styles/sass/base/_typography.scss
+++ b/src/styles/sass/base/_typography.scss
@@ -5,7 +5,7 @@ $font-family-primary: "Gill Sans", "Gill Sans MT", "Calibri", sans-serif;
 
 $font-size-sm: min(1.9rem, 4vw);
 // $font-size-md: 2rem;
-$font-size-md: min(2rem, 5vw);
+$font-size-md: min(2rem, 4.5vw);
 $font-size-lg: 2.5rem;
 
 // $font-size-xl: 3.75rem;
