--- a/src/styles/sass/components/_item-list-view.scss
+++ b/src/styles/sass/components/_item-list-view.scss
@@ -22,7 +22,7 @@
     @include mixins.item-title;
     grid-column: c-1/c-2;
 
-    padding: 0 20% 0 20%;
+    padding: 0 12% 0 20%;
     justify-items: start;
     align-items: center;
     transform: translateX(-1.2rem);
